--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-<style>
-	body {
-		font-family: Georgia, serif;
-	}
-</style>
+<link rel="stylesheet" href="style.css">
+
 
 <h1>Moja pierwsza strona internetu</h1>
+<a href="elements.html">Elementy projektu</a>
